# scalet

./: Cargo.toml  README.md
.github/workflows/: build_push.yml
src/: cwt_executor.rs  cwt_filter.rs  err.rs  factory.rs  freqs.rs  lib.rs  sample.rs  scale_bounds.rs  scales.rs  spetrum_arith.rs
src/avx/: mod.rs  spectrum_f32.rs  spectrum_f64.rs
src/drawing/: mod.rs  scalogram.rs
src/drawing/colormap/: mod.rs
src/neon/: fcma_spectrum_f32.rs  fcma_spectrum_f64.rs  mod.rs  mul_spectrum_f64.rs  spectrum_f32.rs  util.rs
src/scalogram/: mod.rs  scalogram.rs
src/scalogram/colormap/: mod.rs
src/sse/: mod.rs  spectrum_f32.rs  spectrum_f64.rs
src/wavelets/: cmhat.rs  gabor.rs  hhat.rs  mod.rs  morlet.rs
