[package]
name = "scalet"
version = "0.1.1"
edition = "2024"
description = "Continious wavelet transform"
readme = "README.md"
keywords = ["dsp", "wavelet", "cwt"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/scalet"
categories = ["algorithms", "science"]
homepage = "https://github.com/awxkee/scalet"
repository = "https://github.com/awxkee/scalet"
exclude = ["*.jpg", "/assets", "*.png", "*.sh", "/assets/*"]
rust-version = "1.87.0"

[dependencies]
num-traits = "0.2.19"
num-complex = "0.4.6"
pxfm = "0.1.27"
zaft = "0.2.6"

[features]
default = ["neon", "sse", "avx"]
neon = ["zaft/neon"]
# FEAT_FCMA ( complex multiply add on NEON )
fcma = ["neon", "zaft/fcma"]
# Enables SSE 4.2 acceleration
sse = []
# Enables AVX2 + FMA acceleration
avx = ["zaft/avx"]
# Scalogram drawing
scalogram = []

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open --manifest-path ./Cargo.toml
all-features = true
rustdoc-args = ["--cfg", "docsrs"]